--- a/WebContent/views/desktop/datos/configuracion/plantillaEvento/PlantillaEventoFormBasic.zul
+++ b/WebContent/views/desktop/datos/configuracion/plantillaEvento/PlantillaEventoFormBasic.zul
@@ -6,105 +6,146 @@
 
 		<div class="row">
 			<div class="col s12">
-				<div class="input-field col s12">
-					<textbox id="nombre" type="text"
-						value="@bind(vm.evento.nombre)" readonly="true">
+				<div class="input-field col s6">
+					<n:label for="nombre">Nombre</n:label>
+					<textbox id="nombre" type="text" maxlength="100"
+						disabled="true" value="@bind(vm.evento.nombre)">
+					</textbox>
+				</div>
+
+				<div class="input-field  col s6">
+					<n:label class="active"
+						for="fk_clasificador_evento">
+						Clasificador de Evento
+					</n:label>
+					<combobox id="fk_clasificador_evento"
+						disabled="true" readonly="true"
+						model="@bind(vm.clasificadorEventos)"
+						selectedItem="@bind(vm.evento.fkClasificadorEvento)">
+						<template name="model">
+							<comboitem label="@load(each.nombre)" />
+						</template>
+					</combobox>
+				</div>
+			</div>
+			<div class="col s12">
+				<div class="input-field  col s12">
+					<n:label for="descripcion">Descripción</n:label>
+					<textbox id="descripcion" type="text"
+						disabled="true" maxlength="250" sclass="materialize-textarea"
+						multiline="true" value="@bind(vm.evento.descripcion)">
 					</textbox>
 				</div>
 			</div>
-
-			<div>
-				<tabbox id="tb" class="rtab">
+			<div class="col s12">
+				<tabbox id="tb" class="rtab ltab">
 					<tabs id="tabs">
 						<tab id="tabIndicadores" label="Indicadores"
 							selected="true" />
 						<tab id="tabTareas" label="Tareas" />
 					</tabs>
-
 					<tabpanels>
 						<tabpanel>
-							<hlayout>
-								<vlayout>
-									<listbox
-										model="@bind(vm.indicadores)"
-										selectedItems="@bind(vm.indicadoresSel)" multiple="true"
-										width="400px" height="300px">
-										<listhead sizable="true">
-											<listheader
-												label="Indicadores" />
-										</listhead>
-										<template name="model">
-											<listitem
-												label="@load(each.nombre)" />
-										</template>
-									</listbox>
-								</vlayout>
-								<vbox vflex="1">
-									<button label="&gt;"
-										onClick="@command('indicadoresAPlantilla')" />
-									<button label="&lt;"
-										onClick="@command('indicadoresFueraPlantilla')" />
-								</vbox>
-								<vlayout>
-									<listbox
-										model="@bind(vm.evento.eventoIndicadors)"
-										selectedItems="@bind(vm.eventoIndicadoresSel)" multiple="true"
-										width="400px" height="300px">
-										<listhead sizable="true">
-											<listheader
-												label="Indicadores del evento" />
-										</listhead>
-										<template name="model">
-											<listitem
-												label="@load(each.fkIndicador.nombre)" />
-										</template>
-									</listbox>
-								</vlayout>
-							</hlayout>
+
+							<div sclass="col s5" style="padding:0px">
+								<listbox model="@load(vm.indicadores)"
+									emptyMessage="No hay indicadores registrados."
+									selectedItems="@bind(vm.indicadoresSeleccionados)"
+									multiple="true">
+									<listhead sizable="true">
+										<listheader label="Indicadores" />
+									</listhead>
+									<template name="model">
+										<listitem
+											label="@load(each.nombre)">
+											<zscript>
+	self.setDisabled(vm.disabledIndicador(each));
+</zscript>
+										</listitem>
+									</template>
+								</listbox>
+							</div>
+							<div sclass="col s1" align="center">
+								<div sclass="row">
+									<button sclass="button-conf"
+										iconSclass="fa fa-angle-double-right"
+										onClick="@command('agregarIndicadoresPlantilla')" />
+								</div>
+								<div sclass="row">
+									<button sclass="button-conf"
+										iconSclass="fa fa-angle-double-left"
+										onClick="@command('removerIndicadoresPlantilla')" />
+								</div>
+							</div>
+
+							<div sclass="col s5" style="padding:0px">
+								<listbox
+									emptyMessage="No hay indicadores asociados a la plantilla del evento seleccionado."
+									model="@bind(vm.eventoIndicadores)"
+									selectedItems="@bind(vm.eventoIndicadoresSeleccionados)"
+									multiple="true">
+									<listhead sizable="true">
+										<listheader
+											label="Indicadores del evento" />
+									</listhead>
+									<template name="model">
+										<listitem
+											label="@load(each.nombre)" />
+									</template>
+								</listbox>
+							</div>
 						</tabpanel>
 						<tabpanel>
-							<hlayout>
-								<vlayout>
-									<listbox model="@bind(vm.tareas)"
-										selectedItems="@bind(vm.tareasSel)" multiple="true"
-										width="400px" height="300px">
-										<listhead sizable="true">
-											<listheader label="Tareas" />
-										</listhead>
-										<template name="model">
-											<listitem
-												label="@load(each.nombre)" />
-										</template>
-									</listbox>
-								</vlayout>
-								<vbox vflex="1" pack="middle">
-									<button label="&gt;"
-										onClick="@command('tareasAPlantilla')" />
-									<button label="&lt;"
-										onClick="@command('tareasFueraPlantilla')" />
-								</vbox>
-								<vlayout>
-									<listbox
-										model="@bind(vm.evento.eventoTareas)"
-										selectedItems="@bind(vm.eventoTareasSel)" multiple="true"
-										width="400px" height="300px">
-										<listhead sizable="true">
-											<listheader
-												label="Tareas del evento" />
-										</listhead>
-										<template name="model">
-											<listitem
-												label="@load(each.fkTarea.nombre)" />
-										</template>
-									</listbox>
-								</vlayout>
-							</hlayout>
+							<div sclass="col s5">
+								<listbox model="@bind(vm.tareas)"
+									emptyMessage="No hay tareas registrados."
+									selectedItems="@bind(vm.tareasSeleccionadas)"
+									multiple="true">
+									<listhead sizable="true">
+										<listheader label="Tareas" />
+									</listhead>
+									<template name="model">
+										<listitem
+											label="@load(each.nombre)">
+											<zscript>
+	self.setDisabled(vm.disabledTarea(each));
+</zscript>
+										</listitem>
+									</template>
+								</listbox>
+							</div>
+							<div sclass="col s1">
+								<div sclass="row valign">
+									<button
+										iconSclass="fa fa-angle-double-right" sclass="button-conf"
+										onClick="@command('agregarTareasPlantilla')" />
+								</div>
+								<div sclass="row">
+									<button
+										iconSclass="fa fa-angle-double-left" sclass="button-conf"
+										onClick="@command('removerTareasPlantilla')" />
+								</div>
+							</div>
+							<div sclass="col s5" style="padding:0px">
+								<listbox model="@bind(vm.eventoTareas)"
+									emptyMessage="No hay tareas asociadas a la plantilla del evento seleccionado."
+									selectedItems="@bind(vm.eventoTareasSeleccionadas)"
+									multiple="true">
+									<listhead sizable="true">
+										<listheader
+											label="Tareas del evento" />
+									</listhead>
+									<template name="model">
+										<listitem
+											label="@load(each.nombre)">
+										</listitem>
+									</template>
+								</listbox>
+							</div>
 						</tabpanel>
 					</tabpanels>
 				</tabbox>
 			</div>
-
-
 		</div>
 
 		<div id="divButtonsForm"
