--- a/WebContent/views/desktop/datos/configuracion/plantillaEvento/PlantillaEventoIndex.zul
+++ b/WebContent/views/desktop/datos/configuracion/plantillaEvento/PlantillaEventoIndex.zul
@@ -3,15 +3,15 @@
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.datos.configuracion.plantilla_evento.viewmodels.VM_PlantillaEventoIndex')">
-
 		<div class="row">
 			<div class="col s12">
-				<div class="col s6">
+				<div class="col s6" style="margin-top: 30px">
 					<listbox id="listbox" model="@load(vm.objectsList)"
+						emptyMessage="No hay eventos registrados."
 						selectedItem="@bind(vm.selectedObject)"
 						onSelect="@command('onSelectEvento')">
 						<listhead sizable="true">
-							<listheader width="49%" label="Evento" />
+							<listheader label="Evento" />
 						</listhead>
 						<template name="model">
 							<listitem>
@@ -26,7 +26,8 @@
 					</listbox>
 				</div>
 
-				<div class="col s6">
+				<div class="col s6 animated fadeIn"
+					visible="@load(not empty vm.selectedObject)">
 					<tabbox class="rtab">
 						<tabs>
 							<tab label="Indicadores" selected="true" />
@@ -34,56 +35,42 @@
 						</tabs>
 						<tabpanels>
 							<tabpanel>
-								<div class="col s12"
-									style="float: unset; margin-top: 20px;">
-									<div class="row">
-										<div class="col s12">
-											<listbox
-												model="@load(vm.selectedObject.eventoIndicadors)"
-												selectedItem="@bind(vm.selectedObject)"
-												onSelect="@command('onSelectEvento')">
-												<listhead
-													sizable="true">
-													<listheader
-														label="Indicadores" />
-												</listhead>
-												<template
-													name="model">
-													<listitem>
-														<listcell
-															label="@load(each.fkIndicador.nombre)" />
-													</listitem>
-												</template>
-											</listbox>
-										</div>
-									</div>
+								<div class="col s12">
+									<listbox disabled="true"
+										emptyMessage="No hay indicadores asociados a la plantilla del evento seleccionado."
+										model="@load(vm.selectedObject.eventoIndicadores)">
+										<listhead>
+											<listheader
+												label="Indicadores" />
+										</listhead>
+										<template name="model">
+											<listitem
+												onCreate="self.setDisabled(true)">
+												<listcell
+													label="@load(each.nombre)" />
+											</listitem>
+										</template>
+									</listbox>
 								</div>
 							</tabpanel>
 							<tabpanel>
-								<div class="col s12"
-									style="float: unset; margin-top: 20px;">
-									<div class="row">
-										<div class="col s12">
-											<listbox
-												model="@load(vm.selectedObject.eventoTareas)"
-												selectedItem="@bind(vm.selectedObject)"
-												onSelect="@command('onSelectEvento')">
-												<listhead
-													sizable="true">
-													<listheader
-														label="Tareas" />
-												</listhead>
-												<template
-													name="model">
-													<listitem>
-														<listcell
-															label="@load(each.fkTarea.nombre)" />
-													</listitem>
-												</template>
-											</listbox>
-										</div>
-									</div>
+								<div class="col s12">
+									<listbox
+										emptyMessage="No hay tareas asociadas a la plantilla del evento seleccionado."
+										model="@load(vm.selectedObject.eventoTareas)">
+										<listhead sizable="true">
+											<listheader label="Tareas" />
+										</listhead>
+										<template name="model">
+											<listitem
+												onCreate="self.setDisabled(true)">
+												<listcell
+													label="@load(each.nombre)" />
+											</listitem>
+										</template>
+									</listbox>
 								</div>
+
 							</tabpanel>
 						</tabpanels>
 					</tabbox>
