--- a/WebContent/views/desktop/datos/configuracion/plantillaTrabajoSocial/PlantillaTrabajoSocialIndex.zul
+++ b/WebContent/views/desktop/datos/configuracion/plantillaTrabajoSocial/PlantillaTrabajoSocialIndex.zul
@@ -6,13 +6,13 @@
 
 		<div class="row">
 			<div class="col s12">
-				<div class="col s6">
+				<div class="col s6" style="margin-top: 30px">
 					<listbox id="listbox" model="@load(vm.objectsList)"
 						selectedItem="@bind(vm.selectedObject)"
+						emptyMessage="No hay trabajos sociales registrados."
 						onSelect="@command('onSelectTrabajoSocial')">
-						<listhead sizable="true">
-							<listheader width="49%"
-								label="Trabajo social" />
+						<listhead>
+							<listheader label="Trabajo Social" />
 						</listhead>
 						<template name="model">
 							<listitem>
@@ -27,32 +27,30 @@
 					</listbox>
 				</div>
 
-				<div class="col s6">
+				<div class="col s6 animated fadeIn"
+					visible="@load(not empty vm.selectedObject)">
 					<tabbox class="rtab">
 						<tabs>
-							<tab label="Indicadores" selected="true" />
-							<tab label="Actividades" />
+							<tab label="Indicadores" />
+							<tab label="Actividades" selected="true" />
 						</tabs>
 						<tabpanels>
 							<tabpanel>
-								<div class="col s12"
-									style="float: unset; margin-top: 20px;">
+								<div class="col s12">
 									<div class="row">
 										<div class="col s12">
 											<listbox
-												model="@load(vm.selectedObject.trabajoSocialIndicadors)"
-												selectedItem="@bind(vm.selectedObject)"
-												onSelect="@command('onSelectTrabajoSocial')">
-												<listhead
-													sizable="true">
+												emptyMessage="No hay indicadores asociadas a la plantilla del trabajo social seleccionado."
+												model="@load(vm.selectedObject.trabajoSocialIndicadores)">
+												<listhead>
 													<listheader
 														label="Indicadores" />
 												</listhead>
 												<template
 													name="model">
-													<listitem>
+													<listitem onCreate="self.setDisabled(true)">
 														<listcell
-															label="@load(each.fkIndicador.nombre)" />
+															label="@load(each.nombre)" />
 													</listitem>
 												</template>
 											</listbox>
@@ -61,24 +59,21 @@
 								</div>
 							</tabpanel>
 							<tabpanel>
-								<div class="col s12"
-									style="float: unset; margin-top: 20px;">
+								<div class="col s12">
 									<div class="row">
 										<div class="col s12">
 											<listbox
-												model="@load(vm.selectedObject.trabajoSocialActividades)"
-												selectedItem="@bind(vm.selectedObject)"
-												onSelect="@command('onSelectTrabajoSocial')">
-												<listhead
-													sizable="true">
+												emptyMessage="No hay actividades asociadas a la plantilla del trabajo social seleccionado."
+												model="@load(vm.selectedObject.trabajoSocialActividades)">
+												<listhead>
 													<listheader
 														label="Actividades" />
 												</listhead>
 												<template
 													name="model">
-													<listitem>
+													<listitem onCreate="self.setDisabled(true)">
 														<listcell
-															label="@load(each.fkActividad.nombre)" />
+															label="@load(each.nombre)" />
 													</listitem>
 												</template>
 											</listbox>
