--- a/WebContent/views/desktop/datos/configuracion/requisitoAyuda/requisitoAyudaIndex.zul
+++ b/WebContent/views/desktop/datos/configuracion/requisitoAyuda/requisitoAyudaIndex.zul
@@ -8,11 +8,12 @@
 			<div class="col s12">
 				<div class="col s6">
 					<listbox id="listbox" model="@load(vm.objectsList)"
+						emptyMessage="No hay ayudas registradas."
 						selectedItem="@bind(vm.selectedObject)"
 						onSelect="@command('onSelectAyuda')">
 
-						<listhead sizable="true">
-							<listheader width="49%" label="Nombre" />
+						<listhead>
+							<listheader label="Nombre" />
 						</listhead>
 						<template name="model">
 							<listitem>
@@ -26,16 +27,17 @@
 						</listfoot>
 					</listbox>
 				</div>
-				<div class="col s6">
+				<div class="col s6 animated fadeIn"
+					visible="@load(not empty vm.selectedObject)">
 					<listbox
-						model="@load(vm.selectedObject.requisitoAyudas)">
-						<listhead sizable="true">
+						emptyMessage="No hay requisitos asociados a la ayuda seleccionada."
+						model="@load(vm.selectedObject.requisitos)">
+						<listhead>
 							<listheader label="Requisitos de Ayuda" />
 						</listhead>
 						<template name="model">
-							<listitem>
-								<listcell
-									label="@load(each.fkRequisito.nombre)" />
+							<listitem onCreate="self.setDisabled(true)">
+								<listcell label="@load(each.nombre)" />
 							</listitem>
 						</template>
 					</listbox>
