--- a/WebContent/views/web/footer.zul
+++ b/WebContent/views/web/footer.zul
@@ -1,4 +1,6 @@
 <zk xmlns:n="native" xmlns:w="client">
+<div sclass="row" apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('vm') @init('ve.smile.web.viewmodels.footer.VM_Footer')">
 	<n:footer>
 		<div class="footer_a">
 			<div class="container">
@@ -25,31 +27,33 @@
 					</div>
 					<div class="col s4">
 						<n:h5>Contacto</n:h5>
-						<div class="row">
-							<div class="col s2">
-								<image src="/imagenes/portal/icon/icon-phone.png"></image>
-							</div>
-							<div class="col s10">
-								<n:p>(0251) 2338265 / 4542039</n:p>
-							</div>
-							<div class="col s2">
-								<span class="fa fa-phone fa-2x"></span>
-							</div>
-							<div class="col s10">
-								<n:p>(0251) 2337004</n:p>
-							</div>
-							<div class="col s2">
-								<image src="/imagenes/portal/icon/icon-envelope.png"></image>
-							</div>
-							<div class="col s10">
-								<n:p>fancalara@gmail.com</n:p>
-							</div>
-							<div class="col s2">
-								<span class="fa fa-map-marker fa-2x"></span>
-							</div>
-							<div class="col s10">
-								<n:p>Urbanizacion "la concordia" vereda 6 casa #21 Barquisimeto-Estado Lara</n:p>
-							</div>								
+						<div class="row" children="@load(vm.organizacion)">
+							<template name="children">
+								<div class="col s2">
+									<image src="/imagenes/portal/icon/icon-phone.png"></image>
+								</div>
+								<div class="col s10">
+									<n:p><label value="@load(each.telefono)"></label></n:p>
+								</div>
+								<div class="col s2">
+									<span class="fa fa-phone fa-2x"></span>
+								</div>
+								<div class="col s10">
+									<n:p><label value="@load(each.telefono)"></label></n:p>
+								</div>
+								<div class="col s2">
+									<image src="/imagenes/portal/icon/icon-envelope.png"></image>
+								</div>
+								<div class="col s10">
+									<n:p>fancalara@gmail.com</n:p>
+								</div>
+								<div class="col s2">
+									<span class="fa fa-map-marker fa-2x"></span>
+								</div>
+								<div class="col s10">
+									<n:p><label value="@load(each.direccion)"></label></n:p>
+								</div>	
+							</template>								
 						</div>
 					</div>
 				</div>
@@ -63,4 +67,5 @@
 			</div>
 		</div>
 	</n:footer>
+</div>
 </zk>
