--- a/WebContent/assets/css/karen.css
+++ b/WebContent/assets/css/karen.css
@@ -571,7 +571,7 @@ label.active + .z-calendar {
 /* /Choosen Box/ */
 /* Dialogs */
 .window-dialog {
-	background: #26A69A;
+	background: #7cb7ec;
 }
 .window-dialog .z-caption .z-caption-content {
 	color: white;
@@ -583,7 +583,7 @@ label.active + .z-calendar {
 }
 .div-buttons-dialog {
 	text-align: center;
-	background: #363940;
+	background: #ffffff;;
 	padding: 5px 5px 0px 5px;
 }
 .div-buttons-dialog button {
