--- a/WebContent/views/desktop/datos/configuracion/plantillaTrabajoSocial/PlantillaTrabajoSocialIndex.zul
+++ b/WebContent/views/desktop/datos/configuracion/plantillaTrabajoSocial/PlantillaTrabajoSocialIndex.zul
@@ -3,16 +3,15 @@
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.datos.configuracion.plantilla_trabajo_social.viewmodels.VM_PlantillaTrabajoSocialIndex')">
-
 		<div class="row">
 			<div class="col s12">
 				<div class="col s6" style="margin-top: 30px">
 					<listbox id="listbox" model="@load(vm.objectsList)"
-						selectedItem="@bind(vm.selectedObject)"
 						emptyMessage="No hay trabajos sociales registrados."
+						selectedItem="@bind(vm.selectedObject)"
 						onSelect="@command('onSelectTrabajoSocial')">
-						<listhead>
-							<listheader label="Trabajo Social" />
+						<listhead sizable="true">
+							<listheader label="Trabajo social" />
 						</listhead>
 						<template name="model">
 							<listitem>
@@ -31,55 +30,47 @@
 					visible="@load(not empty vm.selectedObject)">
 					<tabbox class="rtab">
 						<tabs>
-							<tab label="Indicadores" />
-							<tab label="Actividades" selected="true" />
+							<tab label="Indicadores" selected="true" />
+							<tab label="Actividades" />
 						</tabs>
 						<tabpanels>
 							<tabpanel>
 								<div class="col s12">
-									<div class="row">
-										<div class="col s12">
-											<listbox
-												emptyMessage="No hay indicadores asociadas a la plantilla del trabajo social seleccionado."
-												model="@load(vm.selectedObject.trabajoSocialIndicadores)">
-												<listhead>
-													<listheader
-														label="Indicadores" />
-												</listhead>
-												<template
-													name="model">
-													<listitem onCreate="self.setDisabled(true)">
-														<listcell
-															label="@load(each.nombre)" />
-													</listitem>
-												</template>
-											</listbox>
-										</div>
-									</div>
+									<listbox disabled="true"
+										emptyMessage="No hay indicadores asociados a la plantilla del trabajo social seleccionado."
+										model="@load(vm.selectedObject.trabajoSocialIndicadores)">
+										<listhead>
+											<listheader
+												label="Indicadores" />
+										</listhead>
+										<template name="model">
+											<listitem
+												onCreate="self.setDisabled(true)">
+												<listcell
+													label="@load(each.nombre)" />
+											</listitem>
+										</template>
+									</listbox>
 								</div>
 							</tabpanel>
 							<tabpanel>
 								<div class="col s12">
-									<div class="row">
-										<div class="col s12">
-											<listbox
-												emptyMessage="No hay actividades asociadas a la plantilla del trabajo social seleccionado."
-												model="@load(vm.selectedObject.trabajoSocialActividades)">
-												<listhead>
-													<listheader
-														label="Actividades" />
-												</listhead>
-												<template
-													name="model">
-													<listitem onCreate="self.setDisabled(true)">
-														<listcell
-															label="@load(each.nombre)" />
-													</listitem>
-												</template>
-											</listbox>
-										</div>
-									</div>
+									<listbox
+										emptyMessage="No hay actividades asociadas a la plantilla del trabajo social seleccionado."
+										model="@load(vm.selectedObject.trabajoSocialActividades)">
+										<listhead sizable="true">
+											<listheader label="Actividades" />
+										</listhead>
+										<template name="model">
+											<listitem
+												onCreate="self.setDisabled(true)">
+												<listcell
+													label="@load(each.nombre)" />
+											</listitem>
+										</template>
+									</listbox>
 								</div>
+
 							</tabpanel>
 						</tabpanels>
 					</tabbox>
