--- a/WebContent/views/web/postulacionPadrino.zul
+++ b/WebContent/views/web/postulacionPadrino.zul
@@ -2,7 +2,7 @@
 
 	<window width="80%" sclass="window-dialog"
 		action="show: slideIn;hide: slideOut"
-		use="ve.smile.web.viewmodels.VM_PostuladoVoluntario"
+		use="ve.smile.web.viewmodels.VM_PostuladoPadrino"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_Postulado', dialogData=arg.get('dialogData'))">
 		
@@ -52,27 +52,23 @@
 						</div>
 						<div class="input-field col s6">
 							<n:label for="sexo" class="active">Sexo</n:label>
-							<combobox id="sexo">
-								<comboitem label="Masculino" />
-								<comboitem label="Femenino" />
+							<combobox id="sexo" selectedItem="@bind(vm.persona.sexo)" value="@bind(vm.persona.sexo)"							>
+								<comboitem label="Masculino" value="1"/>
+								<comboitem label="Femenino" value="2"/>
 							</combobox>	
 						</div>
 						<div class="input-field col s6">
 							<n:label for="fecha_nacimiento" class="active">Fecha de Nacimiento</n:label>
-							<datebox id="db" cols="20" format="yyyy/MM/dd"  onCreate="self.value = new Date()"/>
-						</div>
+							<datebox id="db" cols="20" format="yyyy/MM/dd"
+							 value="@bind(vm.persona.fechaNacimiento)"
+							 onCreate="self.value = new Date()"/>
+						</div>						
 						<div class="input-field col s6">
 							<n:label for="telefono_1">Telefono</n:label>
 							<textbox id="telefono_1" type="text"
-								value="">
+								value="@bind(vm.persona.telefono1)">
 							</textbox>
-						</div>	
-						<div class="input-field col s6">
-							<n:label for="monto">Aporte (BsF.)</n:label>
-							<textbox id="monto" type="text"
-								value="">
-							</textbox>
-						</div>																						
+						</div>																											
 					</div>					
 					<div class="col s4 text-center">
 						<image src="/imagenes/portal/conejo.png"></image>
@@ -80,7 +76,7 @@
 					<div id="divButtonsForm" sclass="row">
 						<div class="col s12 text-center">
 							<button id="btnAccept" class="waves-effect waves-light btn" href="">
-								aceptar
+								Aceptar
 							</button>
 						</div>
 					</div>
