--- a/WebContent/views/desktop/datos/parametros/patrocinador/PatrocinadorFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/patrocinador/PatrocinadorFormBasic.zul
@@ -1,3 +1,5 @@
+<?component name="uploadImageSingle" macroURI="/assets/theme/components/upload_image_single.zul"?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
@@ -5,24 +7,145 @@
 		viewModel="@id('vm') @init('ve.smile.datos.parametros.patrocinador.viewmodels.VM_PatrocinadorFormBasic')">
 
 		<div class="row">
+			<div sclass="col s12 form">
+			
+				<tabbox id="tb" class="rtab">
+					<tabs id="tabs">
+						<tab id="tabDatosPersonales" label="Datos principales" selected="true" />
+						<tab id="tabContacto" label="Información de contacto" />
+					</tabs>
 
-			<div sclass="col s12">
-				<div class="input-field offset-s2 col s8">
-					<n:label class="active" for="fk_persona">
-						Persona
-					</n:label>
-					<combobox id="fk_persona" readonly="true"
-						model="@bind(vm.personas)"
-						selectedItem="@bind(vm.patrocinador.fkPersona)">
-						<template name="model">
-							<comboitem label="@load(each.nombre)" />
-						</template>
-					</combobox>
-				</div>
+					<tabpanels>
+						<tabpanel>
+			
+							<div class="input-field col s6">
+								<n:label for="nombre">Nombre</n:label>
+								<textbox id="nombre" type="text" value="@bind(vm.patrocinador.fkPersona.nombre)"> </textbox>
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="apellido">Apellido</n:label>
+								<textbox id="apellido" type="text" value="@bind(vm.patrocinador.fkPersona.apellido)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="tipo_persona" class="active">Tipo de persona</n:label>
+								<combobox id="tipo_persona" readonly="true" model="@bind(vm.tipoPersonaEnums)" selectedItem="@bind(vm.patrocinador.fkPersona.tipoPersona)">
+									<template name="model">
+										<comboitem label="@load(each)" />
+									</template>
+								</combobox>	
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="identificacion">Cédula o RIF</n:label>
+								<textbox id="identificacion" type="text" value="@bind(vm.patrocinador.fkPersona.identificacion)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label class="active" for="fk_estado"> Ciudad </n:label>
+								<combobox id="fk_ciudad" readonly="true" model="@bind(vm.ciudades)" selectedItem="@bind(vm.patrocinador.fkPersona.fkCiudad)">
+									<template name="model">
+										<comboitem label="@load(each.nombre)" />
+									</template>
+								</combobox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="sexo" class="active">Sexo</n:label>
+								<combobox id="sexo" readonly="true" selectedItem="@bind(vm.patrocinador.fkPersona.sexo)">
+									<comboitem label="Masculino" />
+									<comboitem label="Femenino" />
+								</combobox>	
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
+								<datebox id="db" cols="20" format="yyyy/MM/dd" value="@bind(vm.patrocinador.fkPersona.fechaNacimiento)"/>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="direccion">Dirección</n:label>
+								<textbox id="direccion" type="text" value="@bind(vm.patrocinador.fkPersona.direccion)"> </textbox>
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="fecha_ingreso" class="active">Fecha de ingreso</n:label>
+								<datebox id="fecha_ingreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.patrocinador.fechaIngreso)"/>
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="fecha_egreso" class="active">Fecha de egreso</n:label>
+								<datebox id="fecha_egreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.patrocinador.fechaSalida)"/>
+							</div>
+												
+							<div class="col s12">
+								<div class="input-field col s12">
+									<uploadImageSingle maxsize="9000" size="200" idUpload="1" title="Imagen del patrocinador" />
+								</div>
+							</div>
+						
+						</tabpanel>
+						
+						<tabpanel>
+						
+							<div class="input-field col s6">
+								<n:label for="telefono_1">Teléfono 1</n:label>
+								<textbox id="telefono_1" type="text" value="@bind(vm.patrocinador.fkPersona.telefono1)"> </textbox>
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="telefono_2">Teléfono 2</n:label>
+								<textbox id="telefono_2" type="text" value="@bind(vm.patrocinador.fkPersona.telefono2)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="fax">Fax</n:label>
+								<textbox id="fax" type="text" value="@bind(vm.patrocinador.fkPersona.fax)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="correo">Correo electrónico</n:label>
+								<textbox id="correo" type="text" value="@bind(vm.patrocinador.fkPersona.correo)"> </textbox>
+							</div>
+											
+							<div class="input-field col s6">
+								<n:label for="twitter">Twitter</n:label>
+								<textbox id="twitter" type="text" value="@bind(vm.patrocinador.fkPersona.twitter)"> </textbox>
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="instagram">Instagram</n:label>
+								<textbox id="instagram" type="text" value="@bind(vm.patrocinador.fkPersona.instagram)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="facebook">Facebook</n:label>
+								<textbox id="facebook" type="text" value="@bind(vm.patrocinador.fkPersona.facebook)"> </textbox>
+							</div>
+				
+							<div class="input-field col s6">
+								<n:label for="linkedin">LinkedIn</n:label>
+								<textbox id="linkedin" type="text" value="@bind(vm.patrocinador.fkPersona.linkedin)"> </textbox>
+							</div>
+							
+							<div class="input-field col s6">
+								<n:label for="sitioWeb">Sitio web</n:label>
+								<textbox id="sitioWeb" type="text" value="@bind(vm.patrocinador.fkPersona.sitioWeb)"> </textbox>
+							</div>
+
+						</tabpanel>
+					
+					</tabpanels>
+				
+				</tabbox>
+				
+				
 			</div>
-			<div id="divButtonsForm"
-				use="karen.core.form.buttons.containers.DivButtonsForm">
-			</div>
+		</div>
+		
+		<div id="divButtonsForm"
+			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
 	</div>
 </zk>
